welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:47: error: not found: value avanceSurTraceVerte
    avanceSurTraceVerte()
    ^