welcome.lessons.welcome.methods.slug.SlugHunting.scala.code
def directionTraceVerte():Int =
{
  var directionCaseVerte = 1
  
  gauche()
  leveBrosse()
  
  for (i <- 1 to 3)
  {
    avance()
    if (isFacingTrail())
    	directionCaseVerte = i
    recule()
    droite()
  }
  
  gauche()
  gauche()
  
  baisseBrosse()
  
  return directionCaseVerte
}

def isFacingTrail():Boolean =
{
  // retourne si le buggle est face ? une case verte
  
  if (estFaceMur())
  	return false
  else
  {
    var surCaseVerte = false
    
    avance()
    surCaseVerte = (getCouleurSol() == Color.green)
    recule()
    
    return surCaseVerte
  }
}

def hunt()
{
  while (directionTraceVerte() == 2 && !estSurBiscuit())
    avanceSurTraceVerte()
  
  if (estSurBiscuit())
  		prendBiscuit()
}